--- a/readme.html
+++ b/readme.html
@@ -4,8 +4,8 @@ only when the shoop is open.
 <br>
 <br>
 <h2>When shop is open</h2>
-<img src="./images/Screenshot 2022-06-04 131312.jpg" alt="">
+<img src="./assigment/images/Screenshot 2022-06-04 131312.jpg" alt="">
 <br>
 <br>
 <h2>When shop is closed</h2>
-<img src="./images/Screenshot 2022-06-04 131449.jpg" alt="">
+<img src="./assigment/images/Screenshot 2022-06-04 131449.jpg" alt="">
